--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.6.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.16.0",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
